fix: include missing . from logo on mobile.

--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -153,7 +153,7 @@ body {
         &-title {
             // Shorten title to "EC" on mobile (uppercase)
             &::after {
-                content: "EC";
+                content: "EC.";
                 font-size: 1.5rem;
             }
             
